--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,20 +5,28 @@
         Manage Categories
     </h3>
 
-<div class="row">
-    {% for category in categories %}
-        <div class="col s12 m3">
-            <div class="card light-blue darken-4 text-shadow center-align">
-                <div class="card-content white-text">
-                    <span class="card-title">{{ category.category_name }}</span>
-                </div>
-                <div class="card-action">
-                    <a href="#" class="btn green accent-4">Edit</a>
-                    <a href="#" class="btn light-blue lighten-1" >Delete</a>
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2 text-shadow">
+                Add Category <i class="fas fa-plus-square right"></i>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
+        {% for category in categories %}
+            <div class="col s12 m3">
+                <div class="card light-blue darken-4 text-shadow center-align">
+                    <div class="card-content white-text">
+                        <span class="card-title">{{ category.category_name }}</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="#" class="btn green accent-4">Edit</a>
+                        <a href="#" class="btn light-blue lighten-1" >Delete</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
-</div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
